@@ -2,6 +2,7 @@ checkbox (0.17ubuntu1) UNRELEASED; urgency=low
 
   [ Chris Gregan ]
   * Updates made to touchpad and suspend jobs for new tests. 
+  * Updates made to the touchscreen jobs file for new tests.
 
   [ Zygmunt Krynicki ]
   * Incremented changelog
